src/test/ui/error-codes/E0440.stderr
error[E0440]: platform-specific intrinsic has wrong number of type parameters: found 1, expected 0
  --> $DIR/E0440.rs:9:5
   |
LL |     fn x86_mm_movemask_pd<T>(x: f64x2) -> i32; //~ ERROR E0440
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0440`.
